Import of SHARYANTO/File-Copy-Undoable-0.02 from CPAN.
gitpan-cpan-distribution: File-Copy-Undoable
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/File-Copy-Undoable-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for File-Copy-Undoable
 
+0.02    2012-09-05 (SHARYANTO)
+
+        [ENHANCEMENTS]
+
+        - Add 'target_owner' and 'target_group' argument.
+
+
 0.01    2012-09-05 (SHARYANTO)
 
         First release.
