--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for File-Copy-Undoable
 
+0.03    2012-09-06 (SHARYANTO)
+
+        - Don't chown (and fail miserably) if we're not running as root (this is
+          like rsync's -a behavior).
+
+
 0.02    2012-09-05 (SHARYANTO)
 
         [ENHANCEMENTS]
