--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for File-Copy-Undoable
 
+0.04    2013-09-09 (SHARYANTO)
+
+        - No functional changes. Fix wrong argument type --rsync_opts in t/cp.t
+          [CT].
+
+
 0.03    2012-09-06 (SHARYANTO)
 
         - Don't chown (and fail miserably) if we're not running as root (this is
@@ -15,4 +21,4 @@ Revision history for File-Copy-Undoable
 
 0.01    2012-09-05 (SHARYANTO)
 
-        First release.
+        - First release.
